desenv_tests/test-assets/struct/failure/prefix_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv(prefix(value = ""))]
struct Config {
    field: String
}

fn main(){}